# LoremScriptumCompiler

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  INSTALL.md  LICENSE  README.md  anotherScript.lorem  binarytree.lorem  code.ls  deep1.lorem  deep2.lorem  scriptum.lorem  setup.iss  std.lorem  test.lorem  testScript  testScript.asm  testScript.c  testScript.lorem  tst.lorem  tst1.lorem  tst2.lorem
.github/workflows/: cpp-test.yml
examples/: binarytree.lorem  std.lorem
examples/snake/: main.lorem  raylib.lorem  std.lorem
examples/window/: main.lorem  raylib.lorem  std.lorem
include/: AST.hpp  Assembler.hpp  ErrorHandler.hpp  IRContext.hpp  IRGenerator.hpp  LLVMStructs.hpp  Lexer.hpp  LoremSourceFile.hpp  Parser.hpp  Preprocessor.hpp  RomanNumber.hpp  RomanNumbers.hpp  SourceLine.hpp  Syntax.hpp  Token.hpp  Types.hpp
include/lib/linux/: crt1.hpp  crti.hpp  crtn.hpp  libgcc_eh.hpp
include/lib/windows/: crt2.hpp  libkernel32.hpp  libmingw32.hpp  libmingwex.hpp  libmsvcrt.hpp
include/llvm/Config/: llvm-config.h
include/parser/: Parser.hpp
src/: AST.cpp  Assembler.cpp  Codegen.cpp  ErrorHandler.cpp  IRContext.cpp  IRGenerator.cpp  Lexer.cpp  Parser.cpp  ParserBlock.cpp  ParserDeclaration.cpp  ParserExpression.cpp  ParserInstruction.cpp  ParserOLD.txt  ParserOld.cpp  ParserStatement.cpp  Preprocessor.cpp  RomanNumber.cpp  Types.cpp  main.cpp
src/parser/: Parser.cpp  ParserBlock.cpp  ParserExpression.cpp  ParserInstruction.cpp  ParserStatement.cpp
test/: CMakeLists.txt  TestLexer.cpp  TestLexer.hpp  TestParser.cpp  TestParser.hpp  TestParserExpression.cpp  TestRomanNumber.cpp  testHelloWorld.cpp  testHelloWorld.h
